--- a/jenkins/values.yaml
+++ b/jenkins/values.yaml
@@ -1,15 +1,102 @@
 Master:
   InstallPlugins:
-    - kubernetes:1.12.6
-    - workflow-aggregator:2.5
-    - workflow-job:2.21
+    - ace-editor:1.1
+    - antisamy-markup-formatter:1.5
+    - apache-httpcomponents-client-4-api:4.5.5-3.0
+    - authentication-tokens:1.3
+    - blueocean:1.3.3
+    - blueocean-autofavorite:1.1.0
+    - blueocean-bitbucket-pipeline:1.3.3
+    - blueocean-commons:1.8.3
+    - blueocean-config:1.3.3
+    - blueocean-core-js:1.8.3
+    - blueocean-dashboard:1.8.3
+    - blueocean-display-url:2.2.0
+    - blueocean-events:1.3.3
+    - blueocean-github-pipeline:1.3.3
+    - blueocean-git-pipeline:1.3.3
+    - blueocean-i18n:1.8.3
+    - blueocean-jira:1.8.3
+    - blueocean-jwt:1.3.3
+    - blueocean-personalization:1.8.3
+    - blueocean-pipeline-api-impl:1.3.3
+    - blueocean-pipeline-editor:1.3.3
+    - blueocean-pipeline-scm-api:1.8.3
+    - blueocean-rest:1.8.3
+    - blueocean-rest-impl:1.3.3
+    - blueocean-web:1.8.3
+    - bouncycastle-api:2.17
+    - branch-api:2.0.20
+    - cloudbees-bitbucket-branch-source:2.2.7
+    - cloudbees-folder:6.6
+    - command-launcher:1.2
+    - credentials:2.1.18
     - credentials-binding:1.16
+    - display-url-api:2.2.0
+    - docker-commons:1.13
+    - docker-workflow:1.17
+    - durable-task:1.26
+    - favorite:2.3.1
+    - ghprb:1.40.0
     - git:3.9.1
+    - git-client:2.7.3
+    - github:1.29.2
+    - github-api:1.92
+    - github-branch-source:2.3.6
+    - git-server:1.7
     - google-oauth-plugin:0.6
     - google-source-plugin:0.3
-  Cpu: "1"
-  Memory: "3500Mi"
-  JavaOpts: "-Xms3500m -Xmx3500m"
+    - google-storage-plugin:1.2
+    - google-cloudbuild:0.2.1
+    - greenballs:1.15
+    - htmlpublisher:1.16
+    - jackson2-api:2.8.11.3
+    - jdk-tool:1.1
+    - jenkins-design-language:1.8.3
+    - jira:3.0.2
+    - job-dsl:1.70
+    - jquery-detached:1.2.1
+    - jsch:0.1.54.2
+    - junit:1.26.1
+    - kubernetes:1.12.6
+    - kubernetes-credentials:0.3.1
+    - mailer:1.21
+    - matrix-auth:2.3
+    - matrix-project:1.13
+    - mercurial:2.4
+    - pipeline-build-step:2.7
+    - pipeline-graph-analysis:1.7
+    - pipeline-input-step:2.8
+    - pipeline-milestone-step:1.3.1
+    - pipeline-model-api:1.3.2
+    - pipeline-model-declarative-agent:1.1.1
+    - pipeline-model-definition:1.2.4
+    - pipeline-model-extensions:1.3.2
+    - pipeline-stage-step:2.3
+    - pipeline-stage-tags-metadata:1.3.2
+    - plain-credentials:1.4
+    - pubsub-light:1.12
+    - scm-api:2.2.7
+    - script-security:1.46
+    - sse-gateway:1.16
+    - ssh-credentials:1.14
+    - structs:1.14
+    - token-macro:2.5
+    - variant:1.1
+    - workflow-aggregator:2.5
+    - workflow-api:2.29
+    - workflow-basic-steps:2.11
+    - workflow-cps:2.55
+    - workflow-cps-global-lib:2.11
+    - workflow-durable-task-step:2.22
+    - workflow-job:2.21
+    - workflow-multibranch:2.20
+    - workflow-scm-step:2.6
+    - workflow-step-api:2.16
+    - workflow-support:2.20
+  Cpu: "3"
+  Memory: "10000Mi"
+  JavaOpts: "-Xms4500m -Xmx6000m"
   ServiceType: LoadBalancer
   ServicePort: 80
 Agent:
@@ -22,11 +109,11 @@ Agent:
   Privileged: false
   resources:
     requests:
-      cpu: "200m"
-      memory: "256Mi"
+      cpu: "1500m"
+      memory: "4000Mi"
     limits:
-      cpu: "200m"
-      memory: "256Mi"
+      cpu: "2000m"
+      memory: "8000Mi"
   # You may want to change this to true while testing a new image
   AlwaysPullImage: false
   # Controls how slave pods are retained after the Jenkins build completes
@@ -44,10 +131,13 @@ Agent:
   # Key Value selectors. Ex:
   # jenkins-agent: v1
 Persistence:
-  Size: 100Gi
+  Size: 500Gi
   ExistingClaim: jenkins-volume
 NetworkPolicy:
   ApiVersion: networking.k8s.io/v1
+
 rbac:
   install: true
-  serviceAccountName: cd-jenkins
+  apiVersion: v1
+  roleRef: cluster-admin
+  roleBindingKind: ClusterRoleBinding
